// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangePicker renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-picker {
  width: 256px;
  height: 32px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-month-btn {
  text-transform: uppercase;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-header {
  padding: 8px 16px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-header-super-prev-btn,
.c0.rovna-ui-picker-dropdown .rovna-ui-picker-header-super-next-btn {
  display: none;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-date-panel .rovna-ui-picker-body {
  padding: 8px 16px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-year-panel .rovna-ui-picker-cell-inner,
.c0.rovna-ui-picker-dropdown .rovna-ui-picker-quarter-panel .rovna-ui-picker-cell-inner,
.c0.rovna-ui-picker-dropdown .rovna-ui-picker-month-panel .rovna-ui-picker-cell-inner {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-cell-in-view.rovna-ui-picker-cell-range-start:not( .rovna-ui-picker-cell-range-start-single ):not(.rovna-ui-picker-cell-range-end) .rovna-ui-picker-cell-inner {
  border-start-end-radius: 8px;
  border-end-end-radius: 8px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-cell-in-view.rovna-ui-picker-cell-range-end:not( .rovna-ui-picker-cell-range-end-single ):not(.rovna-ui-picker-cell-range-start) .rovna-ui-picker-cell-inner {
  border-start-start-radius: 8px;
  border-end-start-radius: 8px;
}

<div
  className="rovna-ui-picker rovna-ui-picker-range rovna-ui-picker-middle css-dev-only-do-not-override-u64svk c0"
  data-testid="rovna-ui-range-picker"
  onClick={[Function]}
  onMouseDown={[Function]}
  role="group"
  style={{}}
>
  <div
    className="rovna-ui-picker-input rovna-ui-picker-input-active"
  >
    <input
      autoComplete="off"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      placeholder="Начальная дата"
      readOnly={true}
      size={12}
      value=""
    />
  </div>
  <div
    className="rovna-ui-picker-range-separator"
  >
    <span
      aria-hidden="true"
    >
      <span
        className="c1 rovna-ui-icon-root anticon"
        data-testid="rovna-ui-arrow-forward-icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M14.2672 6.81955C13.8914 7.22426 13.9148 7.85699 14.3195 8.2328L17.4535 11H4C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H17.4535L14.3195 15.7672C13.9148 16.143 13.8914 16.7757 14.2672 17.1804C14.643 17.5852 15.2757 17.6086 15.6804 17.2328L20.6722 12.7405C20.6848 12.729 20.6972 12.7171 20.7094 12.7048C20.7898 12.6241 20.8536 12.5326 20.9007 12.435C20.9109 12.4139 20.9203 12.3926 20.9289 12.3711C20.9706 12.2668 20.9952 12.1539 20.9994 12.0358C20.9998 12.0238 21 12.0119 21 12C21 11.8559 20.9695 11.719 20.9147 11.5952C20.8665 11.4862 20.798 11.3842 20.7094 11.2952C20.6972 11.2829 20.6848 11.271 20.6722 11.2595L15.6804 6.76721C15.2757 6.39141 14.643 6.41484 14.2672 6.81955Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="rovna-ui-picker-input"
  >
    <input
      autoComplete="off"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      placeholder="Конечная дата"
      readOnly={true}
      size={12}
      value=""
    />
  </div>
  <div
    className="rovna-ui-picker-active-bar"
    style={
      {
        "left": 0,
        "position": "absolute",
        "width": 0,
      }
    }
  />
  <span
    className="rovna-ui-picker-suffix"
    onMouseDown={[Function]}
  >
    <span
      className="c2 rovna-ui-icon-root anticon"
      data-testid="rovna-ui-calendar-month-icon"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M7 2C7.55228 2 8 2.44772 8 3V4H16V3C16 2.44772 16.4477 2 17 2C17.5523 2 18 2.44772 18 3V4C19.6569 4 21 5.34315 21 7V9V19C21 20.6569 19.6569 22 18 22H6C4.34315 22 3 20.6569 3 19V9V7C3 5.34315 4.34315 4 6 4V3C6 2.44772 6.44772 2 7 2ZM17 6H7H6C5.44772 6 5 6.44772 5 7V8H19V7C19 6.44772 18.5523 6 18 6H17ZM5 10H19V19C19 19.5523 18.5523 20 18 20H6C5.44772 20 5 19.5523 5 19V10ZM9 13C9 13.5523 8.55229 14 8 14C7.44772 14 7 13.5523 7 13C7 12.4477 7.44772 12 8 12C8.55229 12 9 12.4477 9 13ZM8 18C8.55229 18 9 17.5523 9 17C9 16.4477 8.55229 16 8 16C7.44772 16 7 16.4477 7 17C7 17.5523 7.44772 18 8 18ZM13 13C13 13.5523 12.5523 14 12 14C11.4477 14 11 13.5523 11 13C11 12.4477 11.4477 12 12 12C12.5523 12 13 12.4477 13 13ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18ZM17 13C17 13.5523 16.5523 14 16 14C15.4477 14 15 13.5523 15 13C15 12.4477 15.4477 12 16 12C16.5523 12 17 12.4477 17 13ZM16 18C16.5523 18 17 17.5523 17 17C17 16.4477 16.5523 16 16 16C15.4477 16 15 16.4477 15 17C15 17.5523 15.4477 18 16 18Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`RangePicker with dropdown renders correctly 1`] = `
[
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-picker {
  width: 256px;
  height: 32px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-month-btn {
  text-transform: uppercase;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-header {
  padding: 8px 16px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-header-super-prev-btn,
.c0.rovna-ui-picker-dropdown .rovna-ui-picker-header-super-next-btn {
  display: none;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-date-panel .rovna-ui-picker-body {
  padding: 8px 16px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-year-panel .rovna-ui-picker-cell-inner,
.c0.rovna-ui-picker-dropdown .rovna-ui-picker-quarter-panel .rovna-ui-picker-cell-inner,
.c0.rovna-ui-picker-dropdown .rovna-ui-picker-month-panel .rovna-ui-picker-cell-inner {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-cell-in-view.rovna-ui-picker-cell-range-start:not( .rovna-ui-picker-cell-range-start-single ):not(.rovna-ui-picker-cell-range-end) .rovna-ui-picker-cell-inner {
  border-start-end-radius: 8px;
  border-end-end-radius: 8px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-cell-in-view.rovna-ui-picker-cell-range-end:not( .rovna-ui-picker-cell-range-end-single ):not(.rovna-ui-picker-cell-range-start) .rovna-ui-picker-cell-inner {
  border-start-start-radius: 8px;
  border-end-start-radius: 8px;
}

<div
    className="rovna-ui-picker rovna-ui-picker-range rovna-ui-picker-middle css-dev-only-do-not-override-u64svk c0"
    data-testid="rovna-ui-range-picker"
    onClick={[Function]}
    onMouseDown={[Function]}
    role="group"
    style={{}}
  >
    <div
      className="rovna-ui-picker-input rovna-ui-picker-input-active"
    >
      <input
        autoComplete="off"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        placeholder="Начальная дата"
        readOnly={true}
        size={12}
        value=""
      />
    </div>
    <div
      className="rovna-ui-picker-range-separator"
    >
      <span
        aria-hidden="true"
      >
        <span
          className="c1 rovna-ui-icon-root anticon"
          data-testid="rovna-ui-arrow-forward-icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M14.2672 6.81955C13.8914 7.22426 13.9148 7.85699 14.3195 8.2328L17.4535 11H4C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H17.4535L14.3195 15.7672C13.9148 16.143 13.8914 16.7757 14.2672 17.1804C14.643 17.5852 15.2757 17.6086 15.6804 17.2328L20.6722 12.7405C20.6848 12.729 20.6972 12.7171 20.7094 12.7048C20.7898 12.6241 20.8536 12.5326 20.9007 12.435C20.9109 12.4139 20.9203 12.3926 20.9289 12.3711C20.9706 12.2668 20.9952 12.1539 20.9994 12.0358C20.9998 12.0238 21 12.0119 21 12C21 11.8559 20.9695 11.719 20.9147 11.5952C20.8665 11.4862 20.798 11.3842 20.7094 11.2952C20.6972 11.2829 20.6848 11.271 20.6722 11.2595L15.6804 6.76721C15.2757 6.39141 14.643 6.41484 14.2672 6.81955Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="rovna-ui-picker-input"
    >
      <input
        autoComplete="off"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        placeholder="Конечная дата"
        readOnly={true}
        size={12}
        value=""
      />
    </div>
    <div
      className="rovna-ui-picker-active-bar"
      style={
        {
          "left": 0,
          "position": "absolute",
          "width": 0,
        }
      }
    />
    <span
      className="rovna-ui-picker-suffix"
      onMouseDown={[Function]}
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
        data-testid="rovna-ui-calendar-month-icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M7 2C7.55228 2 8 2.44772 8 3V4H16V3C16 2.44772 16.4477 2 17 2C17.5523 2 18 2.44772 18 3V4C19.6569 4 21 5.34315 21 7V9V19C21 20.6569 19.6569 22 18 22H6C4.34315 22 3 20.6569 3 19V9V7C3 5.34315 4.34315 4 6 4V3C6 2.44772 6.44772 2 7 2ZM17 6H7H6C5.44772 6 5 6.44772 5 7V8H19V7C19 6.44772 18.5523 6 18 6H17ZM5 10H19V19C19 19.5523 18.5523 20 18 20H6C5.44772 20 5 19.5523 5 19V10ZM9 13C9 13.5523 8.55229 14 8 14C7.44772 14 7 13.5523 7 13C7 12.4477 7.44772 12 8 12C8.55229 12 9 12.4477 9 13ZM8 18C8.55229 18 9 17.5523 9 17C9 16.4477 8.55229 16 8 16C7.44772 16 7 16.4477 7 17C7 17.5523 7.44772 18 8 18ZM13 13C13 13.5523 12.5523 14 12 14C11.4477 14 11 13.5523 11 13C11 12.4477 11.4477 12 12 12C12.5523 12 13 12.4477 13 13ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18ZM17 13C17 13.5523 16.5523 14 16 14C15.4477 14 15 13.5523 15 13C15 12.4477 15.4477 12 16 12C16.5523 12 17 12.4477 17 13ZM16 18C16.5523 18 17 17.5523 17 17C17 16.4477 16.5523 16 16 16C15.4477 16 15 16.4477 15 17C15 17.5523 15.4477 18 16 18Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </span>
  </div>,
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: #0062C9FF;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-picker {
  width: 256px;
  height: 32px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-month-btn {
  text-transform: uppercase;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-header {
  padding: 8px 16px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-header-super-prev-btn,
.c0.rovna-ui-picker-dropdown .rovna-ui-picker-header-super-next-btn {
  display: none;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-date-panel .rovna-ui-picker-body {
  padding: 8px 16px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-year-panel .rovna-ui-picker-cell-inner,
.c0.rovna-ui-picker-dropdown .rovna-ui-picker-quarter-panel .rovna-ui-picker-cell-inner,
.c0.rovna-ui-picker-dropdown .rovna-ui-picker-month-panel .rovna-ui-picker-cell-inner {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-cell-in-view.rovna-ui-picker-cell-range-start:not( .rovna-ui-picker-cell-range-start-single ):not(.rovna-ui-picker-cell-range-end) .rovna-ui-picker-cell-inner {
  border-start-end-radius: 8px;
  border-end-end-radius: 8px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-cell-in-view.rovna-ui-picker-cell-range-end:not( .rovna-ui-picker-cell-range-end-single ):not(.rovna-ui-picker-cell-range-start) .rovna-ui-picker-cell-inner {
  border-start-start-radius: 8px;
  border-end-start-radius: 8px;
}

.c2 {
  padding: 8px;
  border-radius: 8px;
  border: 1px solid #F4F4F5FF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c2:hover:not(:active) {
  border-color: #007BFBFF;
}

.c2:active {
  background-color: #E5F2FFFF;
}

.c3 {
  padding: 8px;
  border-radius: 8px;
  border: 1px solid #F4F4F5FF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c3:hover:not(:active) {
  border-color: #007BFBFF;
}

.c3:active {
  background-color: #E5F2FFFF;
}

<div
    className="rovna-ui-picker-dropdown rovna-ui-slide-up-appear rovna-ui-slide-up-appear-prepare rovna-ui-slide-up css-dev-only-do-not-override-u64svk c0 rovna-ui-picker-dropdown-range rovna-ui-picker-dropdown-placement-bottomLeft"
    style={
      {
        "--arrow-x": "0px",
        "--arrow-y": "0px",
        "bottom": "auto",
        "boxSizing": "border-box",
        "left": "-1000vw",
        "right": "auto",
        "top": "-1000vh",
        "zIndex": undefined,
      }
    }
  >
    <div
      className="rovna-ui-picker-range-wrapper rovna-ui-picker-date-range-wrapper"
      style={
        {
          "minWidth": 0,
        }
      }
    >
      <div
        className="rovna-ui-picker-range-arrow"
        style={
          {
            "left": 0,
          }
        }
      />
      <div
        className="rovna-ui-picker-panel-container"
        onMouseDown={[Function]}
        style={
          {
            "marginLeft": 0,
          }
        }
      >
        <div
          className="rovna-ui-picker-panel-layout"
        >
          <div>
            <div
              className="rovna-ui-picker-panels"
            >
              <div
                className="rovna-ui-picker-panel rovna-ui-picker-panel-focused"
                onBlur={[Function]}
                onKeyDown={[Function]}
                tabIndex={-1}
              >
                <div
                  className="rovna-ui-picker-date-panel"
                >
                  <div
                    className="rovna-ui-picker-header"
                  >
                    <button
                      className="rovna-ui-picker-header-super-prev-btn"
                      onClick={[Function]}
                      style={{}}
                      tabIndex={-1}
                      type="button"
                    />
                    <button
                      className="rovna-ui-picker-header-prev-btn"
                      onClick={[Function]}
                      style={{}}
                      tabIndex={-1}
                      type="button"
                    >
                      <span
                        className="c1 rovna-ui-icon-root anticon c2"
                        data-testid="rovna-ui-chevron-left-icon"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clipRule="evenodd"
                            d="M14.2071 6.29289C14.5976 6.68342 14.5976 7.31658 14.2071 7.70711L9.91421 12L14.2071 16.2929C14.5976 16.6834 14.5976 17.3166 14.2071 17.7071C13.8166 18.0976 13.1834 18.0976 12.7929 17.7071L7.79289 12.7071C7.40237 12.3166 7.40237 11.6834 7.79289 11.2929L12.7929 6.29289C13.1834 5.90237 13.8166 5.90237 14.2071 6.29289Z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <div
                      className="rovna-ui-picker-header-view"
                    >
                      <button
                        className="rovna-ui-picker-month-btn"
                        onClick={[Function]}
                        tabIndex={-1}
                        type="button"
                      >
                        ноябрь
                      </button>
                      <button
                        className="rovna-ui-picker-year-btn"
                        onClick={[Function]}
                        tabIndex={-1}
                        type="button"
                      >
                        2023
                      </button>
                    </div>
                    <button
                      className="rovna-ui-picker-header-next-btn"
                      onClick={[Function]}
                      style={
                        {
                          "visibility": "hidden",
                        }
                      }
                      tabIndex={-1}
                      type="button"
                    >
                      <span
                        className="c1 rovna-ui-icon-root anticon c3"
                        data-testid="rovna-ui-chevron-right-icon"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clipRule="evenodd"
                            d="M9.79289 17.7071C9.40237 17.3166 9.40237 16.6834 9.79289 16.2929L14.0858 12L9.79289 7.70711C9.40237 7.31658 9.40237 6.68342 9.79289 6.29289C10.1834 5.90237 10.8166 5.90237 11.2071 6.29289L16.2071 11.2929C16.5976 11.6834 16.5976 12.3166 16.2071 12.7071L11.2071 17.7071C10.8166 18.0976 10.1834 18.0976 9.79289 17.7071Z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <button
                      className="rovna-ui-picker-header-super-next-btn"
                      onClick={[Function]}
                      style={
                        {
                          "visibility": "hidden",
                        }
                      }
                      tabIndex={-1}
                      type="button"
                    />
                  </div>
                  <div
                    className="rovna-ui-picker-body"
                  >
                    <table
                      className="rovna-ui-picker-content"
                    >
                      <thead>
                        <tr>
                          <th>
                            пн
                          </th>
                          <th>
                            вт
                          </th>
                          <th>
                            ср
                          </th>
                          <th>
                            чт
                          </th>
                          <th>
                            пт
                          </th>
                          <th>
                            сб
                          </th>
                          <th>
                            вс
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-10-30"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              30
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-end"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-10-31"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              31
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-start rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-01"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              1
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-02"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              2
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-03"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              3
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-04"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              4
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-05"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              5
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-06"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              6
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-07"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              7
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-08"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              8
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view rovna-ui-picker-cell-today"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-09"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              9
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-10"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              10
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-11"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              11
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-12"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              12
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-13"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              13
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-14"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              14
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-15"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              15
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-16"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              16
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-17"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              17
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-18"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              18
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-19"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              19
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-20"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              20
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-21"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              21
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-22"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              22
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-23"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              23
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-24"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              24
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-25"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              25
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-26"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              26
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-27"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              27
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-28"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              28
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-29"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              29
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-end rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-30"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              30
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-start"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-01"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              1
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-02"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              2
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-03"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              3
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-04"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              4
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-05"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              5
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-06"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              6
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-07"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              7
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-08"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              8
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-09"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              9
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-10"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              10
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
              <div
                className="rovna-ui-picker-panel rovna-ui-picker-panel-focused"
                onBlur={[Function]}
                onKeyDown={[Function]}
                tabIndex={-1}
              >
                <div
                  className="rovna-ui-picker-date-panel"
                >
                  <div
                    className="rovna-ui-picker-header"
                  >
                    <button
                      className="rovna-ui-picker-header-super-prev-btn"
                      onClick={[Function]}
                      style={
                        {
                          "visibility": "hidden",
                        }
                      }
                      tabIndex={-1}
                      type="button"
                    />
                    <button
                      className="rovna-ui-picker-header-prev-btn"
                      onClick={[Function]}
                      style={
                        {
                          "visibility": "hidden",
                        }
                      }
                      tabIndex={-1}
                      type="button"
                    >
                      <span
                        className="c1 rovna-ui-icon-root anticon c2"
                        data-testid="rovna-ui-chevron-left-icon"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clipRule="evenodd"
                            d="M14.2071 6.29289C14.5976 6.68342 14.5976 7.31658 14.2071 7.70711L9.91421 12L14.2071 16.2929C14.5976 16.6834 14.5976 17.3166 14.2071 17.7071C13.8166 18.0976 13.1834 18.0976 12.7929 17.7071L7.79289 12.7071C7.40237 12.3166 7.40237 11.6834 7.79289 11.2929L12.7929 6.29289C13.1834 5.90237 13.8166 5.90237 14.2071 6.29289Z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <div
                      className="rovna-ui-picker-header-view"
                    >
                      <button
                        className="rovna-ui-picker-month-btn"
                        onClick={[Function]}
                        tabIndex={-1}
                        type="button"
                      >
                        декабрь
                      </button>
                      <button
                        className="rovna-ui-picker-year-btn"
                        onClick={[Function]}
                        tabIndex={-1}
                        type="button"
                      >
                        2023
                      </button>
                    </div>
                    <button
                      className="rovna-ui-picker-header-next-btn"
                      onClick={[Function]}
                      style={{}}
                      tabIndex={-1}
                      type="button"
                    >
                      <span
                        className="c1 rovna-ui-icon-root anticon c3"
                        data-testid="rovna-ui-chevron-right-icon"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clipRule="evenodd"
                            d="M9.79289 17.7071C9.40237 17.3166 9.40237 16.6834 9.79289 16.2929L14.0858 12L9.79289 7.70711C9.40237 7.31658 9.40237 6.68342 9.79289 6.29289C10.1834 5.90237 10.8166 5.90237 11.2071 6.29289L16.2071 11.2929C16.5976 11.6834 16.5976 12.3166 16.2071 12.7071L11.2071 17.7071C10.8166 18.0976 10.1834 18.0976 9.79289 17.7071Z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <button
                      className="rovna-ui-picker-header-super-next-btn"
                      onClick={[Function]}
                      style={{}}
                      tabIndex={-1}
                      type="button"
                    />
                  </div>
                  <div
                    className="rovna-ui-picker-body"
                  >
                    <table
                      className="rovna-ui-picker-content"
                    >
                      <thead>
                        <tr>
                          <th>
                            пн
                          </th>
                          <th>
                            вт
                          </th>
                          <th>
                            ср
                          </th>
                          <th>
                            чт
                          </th>
                          <th>
                            пт
                          </th>
                          <th>
                            сб
                          </th>
                          <th>
                            вс
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-27"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              27
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-28"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              28
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-29"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              29
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-end"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-11-30"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              30
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-start rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-01"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              1
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-02"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              2
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-03"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              3
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-04"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              4
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-05"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              5
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-06"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              6
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-07"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              7
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-08"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              8
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-09"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              9
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-10"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              10
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-11"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              11
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-12"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              12
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-13"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              13
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-14"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              14
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-15"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              15
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-16"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              16
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-17"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              17
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-18"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              18
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-19"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              19
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-20"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              20
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-21"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              21
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-22"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              22
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-23"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              23
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-24"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              24
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-25"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              25
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-26"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              26
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-27"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              27
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-28"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              28
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-29"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              29
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-30"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              30
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-end rovna-ui-picker-cell-in-view"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2023-12-31"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              31
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td
                            className="rovna-ui-picker-cell rovna-ui-picker-cell-start"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2024-01-01"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              1
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2024-01-02"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              2
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2024-01-03"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              3
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2024-01-04"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              4
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2024-01-05"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              5
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2024-01-06"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              6
                            </div>
                          </td>
                          <td
                            className="rovna-ui-picker-cell"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="2024-01-07"
                          >
                            <div
                              className="rovna-ui-picker-cell-inner"
                            >
                              7
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
